package app;

public class Category {
    Category parent;
    String name;
}
