package app;

public class Person {
    int id;
    String name;
    String surname;
}
