package app;

public class Product {
    String name;
    //Path to an image
    String image;
    double price;
    Category category;
}
